python_ffi/lotrc.h

typedef struct AlignedBuf {
  struct slice_AlignmentHelper data;
  uintptr_t size;
} AlignedBuf;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct ref_slice_u8 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_u8;
typedef struct CompressedDataRef {
  struct ref_slice_u8 data;
  struct AlignedBuf data_decomp;
} CompressedDataRef;
typedef uint32_t u32_be;
typedef u32_be u32Xbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct ref_slice_BufferInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_BufferInfoXbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct ref_slice_HkConstraintDataXbox {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_HkConstraintDataXbox;
typedef uint16_t u16_be;
typedef u16_be u16Xbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct ref_slice_u32Xbox {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_u32Xbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct ref_slice_u16Xbox {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_u16Xbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct IndexMap_u32__IndexBufferRefXbox {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__IndexBufferRefXbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct IndexMap_u32__VertexBufferRefXbox {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__VertexBufferRefXbox;
typedef u32Xbox CrcXbox;
typedef uint64_t u64_be;
typedef u64_be u64Xbox;
typedef uint8_t u8Xbox;
typedef float f32_be;
typedef f32_be f32Xbox;
/**
 *gen_ffi:export
 */
typedef struct MatBaseXbox {
  u32Xbox unk_0;
  u32Xbox unk_1;
  CrcXbox tex0;
  CrcXbox tex1;
  CrcXbox tex2;
  CrcXbox tex3;
  CrcXbox tex4;
  CrcXbox tex5;
  CrcXbox key_guid;
  CrcXbox mask0;
  CrcXbox mask1;
  CrcXbox mask2;
  u32Xbox unk_12;
  u32Xbox unk_13;
  u32Xbox unk_14;
  u32Xbox unk_15;
  u32Xbox unk_16;
  u32Xbox unk_17;
  u32Xbox unk_18;
  u32Xbox unk_19;
  u32Xbox unk_20;
  u32Xbox unk_21;
  u32Xbox unk_22;
  u32Xbox unk_23;
  u32Xbox unk_24;
  u32Xbox unk_25;
  u32Xbox unk_26;
  u32Xbox unk_27;
  u32Xbox unk_28;
  u32Xbox unk_29;
  u32Xbox unk_30;
  u32Xbox unk_31;
  u32Xbox unk_32;
  u32Xbox unk_33;
  u32Xbox z_34;
  u32Xbox z_35;
  u32Xbox z_36;
  u32Xbox z_37;
  u32Xbox z_38;
  u32Xbox z_39;
  u32Xbox unk_40;
  u32Xbox unk_41;
  u32Xbox unk_42;
  u32Xbox unk_43;
  u32Xbox unk_44;
  u32Xbox unk_45;
  u32Xbox unk_46;
  u32Xbox unk_47;
  u32Xbox unk_48;
  u32Xbox unk_49;
  u64Xbox flags;
  u32Xbox kind;
  u32Xbox unk_53;
  u8Xbox unk_54a;
  u8Xbox unk_54b;
  u16Xbox side_flags;
  u32Xbox unk_55;
  u32Xbox unk_56;
  u32Xbox unk_57;
  f32Xbox unk_58;
  f32Xbox unk_59;
  f32Xbox unk_60;
  f32Xbox unk_61;
  f32Xbox unk_62;
  f32Xbox unk_63;
  f32Xbox unk_64;
  f32Xbox unk_65;
  f32Xbox unk_66;
  f32Xbox unk_67;
  f32Xbox unk_68;
  f32Xbox unk_69;
  u32Xbox unk_70;
  u32Xbox unk_71;
  u32Xbox unk_72;
  f32Xbox unk_73;
  f32Xbox unk_74;
  f32Xbox unk_75;
  f32Xbox unk_76;
  u32Xbox unk_77;
  f32Xbox unk_78;
  f32Xbox unk_79;
  f32Xbox unk_80;
  f32Xbox unk_81;
  u32Xbox unk_82;
  u32Xbox unk_83;
  u32Xbox unk_84;
  f32Xbox unk_85;
  u32Xbox mat_extra_offset;
  CrcXbox key;
  u32Xbox unk_88;
  u32Xbox z_89;
} MatBaseXbox;
/**
 *gen_ffi:export
 */
typedef struct Mat1Xbox {
  struct MatBaseXbox base;
} Mat1Xbox;
/**
 *gen_ffi:export
 */
typedef struct MatExtraXbox {
  u32Xbox unk_0;
  u32Xbox unk_1;
  u32Xbox unk_2;
  u32Xbox unk_3;
  u32Xbox unk_4;
  u32Xbox unk_5;
  u32Xbox unk_6;
  u32Xbox unk_7;
  u32Xbox unk_8;
  u32Xbox unk_9;
  u32Xbox unk_10;
  f32Xbox unk_11;
  f32Xbox unk_12;
  f32Xbox unk_13;
  f32Xbox unk_14;
  f32Xbox unk_15;
  u32Xbox unk_16;
  f32Xbox unk_17;
  f32Xbox unk_18;
  f32Xbox unk_19;
  f32Xbox unk_20;
  f32Xbox unk_21;
  u32Xbox unk_22;
  u32Xbox unk_23;
  u32Xbox unk_24;
  u32Xbox unk_25;
  u32Xbox unk_26;
  u32Xbox unk_27;
  u32Xbox unk_28;
  u32Xbox unk_29;
  u32Xbox unk_30;
  u32Xbox unk_31;
  u32Xbox unk_32;
  u32Xbox unk_33;
  u32Xbox unk_34;
  u32Xbox unk_35;
  u32Xbox unk_36;
  u32Xbox unk_37;
  u32Xbox unk_38;
  u32Xbox unk_39;
  u32Xbox unk_40;
  u32Xbox unk_41;
  u32Xbox unk_42;
  u32Xbox unk_43;
  u32Xbox unk_44;
  u32Xbox unk_45;
  u32Xbox unk_46;
  u32Xbox unk_47;
  u32Xbox unk_48;
  u32Xbox unk_49;
} MatExtraXbox;
typedef struct Mat1RefXbox {
  const struct Mat1Xbox *info;
  const struct MatExtraXbox *extra;
} Mat1RefXbox;
/**
 *gen_ffi:export
 */
typedef struct Mat2Xbox {
  struct MatBaseXbox base;
  u32Xbox unk_90;
  u32Xbox unk_91;
  u32Xbox unk_92;
  u32Xbox unk_93;
  u32Xbox unk_94;
  u32Xbox unk_95;
  u32Xbox unk_96;
  u32Xbox unk_97;
  u32Xbox unk_98;
  u32Xbox unk_99;
  u32Xbox unk_100;
  u32Xbox unk_101;
  f32Xbox unk_102;
  f32Xbox unk_103;
  f32Xbox unk_104;
  f32Xbox unk_105;
  f32Xbox unk_106;
  f32Xbox unk_107;
  f32Xbox unk_108;
  f32Xbox unk_109;
  f32Xbox unk_110;
  f32Xbox unk_111;
  f32Xbox unk_112;
  f32Xbox unk_113;
  u32Xbox unk_114;
  u32Xbox unk_115;
  u32Xbox unk_116;
  CrcXbox unk_117;
  CrcXbox unk_118;
  CrcXbox unk_119;
  u8Xbox unk_120a;
  u8Xbox unk_120b;
  u8Xbox unk_120c;
  u8Xbox unk_120d;
  u32Xbox unk_121;
} Mat2Xbox;
typedef struct Mat2RefXbox {
  const struct Mat2Xbox *info;
  const struct MatExtraXbox *extra;
} Mat2RefXbox;
/**
 *gen_ffi:export
 */
typedef struct Mat3Xbox {
  struct MatBaseXbox base;
  f32Xbox unk_90;
  f32Xbox unk_91;
  f32Xbox unk_92;
  f32Xbox unk_93;
  f32Xbox unk_94;
  f32Xbox unk_95;
  f32Xbox unk_96;
  f32Xbox unk_97;
  f32Xbox unk_98;
  f32Xbox unk_99;
  f32Xbox unk_100;
  f32Xbox unk_101;
  f32Xbox unk_102;
  f32Xbox unk_103;
  f32Xbox unk_104;
  f32Xbox unk_105;
  f32Xbox unk_106;
  f32Xbox unk_107;
  f32Xbox unk_108;
  f32Xbox unk_109;
  f32Xbox unk_110;
  f32Xbox unk_111;
  f32Xbox unk_112;
  f32Xbox unk_113;
  u8Xbox variation_id_color;
  u8Xbox variation_id_texture;
  u8Xbox variation_id_specular;
  u8Xbox unk_114d;
  u32Xbox unk_115;
} Mat3Xbox;
typedef struct Mat3RefXbox {
  const struct Mat3Xbox *info;
  const struct MatExtraXbox *extra;
} Mat3RefXbox;
/**
 *gen_ffi:export
 */
typedef struct Mat4Xbox {
  struct MatBaseXbox base;
  f32Xbox unk_90;
  u32Xbox unk_91;
  u32Xbox unk_92;
  u32Xbox unk_93;
  u32Xbox unk_94;
  u32Xbox unk_95;
  f32Xbox unk_96;
  u32Xbox unk_97;
  f32Xbox unk_98;
  u32Xbox unk_99;
  u32Xbox unk_100;
  u32Xbox unk_101;
  u32Xbox unk_102;
  u32Xbox unk_103;
  f32Xbox unk_104;
  u32Xbox unk_105;
  f32Xbox unk_106;
  u32Xbox unk_107;
  u32Xbox unk_108;
  f32Xbox unk_109;
  u32Xbox unk_110;
  u32Xbox unk_111;
  f32Xbox unk_112;
  f32Xbox unk_113;
  f32Xbox unk_114;
  u32Xbox unk_115;
  u32Xbox unk_116;
  f32Xbox unk_117;
  u32Xbox unk_118;
  u32Xbox unk_119;
  f32Xbox unk_120;
  f32Xbox unk_121;
  f32Xbox unk_122;
  u32Xbox unk_123;
  u32Xbox unk_124;
  f32Xbox unk_125;
  u32Xbox unk_126;
  u32Xbox unk_127;
  f32Xbox unk_128;
  f32Xbox unk_129;
  f32Xbox unk_130;
  u32Xbox unk_131;
  u32Xbox unk_132;
  f32Xbox unk_133;
  u32Xbox unk_134;
  u32Xbox unk_135;
  f32Xbox unk_136;
  f32Xbox unk_137;
  f32Xbox unk_138;
  u32Xbox unk_139;
  u32Xbox unk_140;
  f32Xbox unk_141;
  u32Xbox unk_142;
  u32Xbox unk_143;
  f32Xbox unk_144;
  f32Xbox unk_145;
} Mat4Xbox;
typedef struct Mat4RefXbox {
  const struct Mat4Xbox *info;
  const struct MatExtraXbox *extra;
} Mat4RefXbox;
typedef enum MatRefXbox_Tag MatRefXbox_Tag;
typedef uint8_t MatRefXbox_Tag;
typedef struct MatRefXbox {
  MatRefXbox_Tag tag;
  union {
    struct {
      struct Mat1RefXbox mat1;
    };
    struct {
      struct Mat2RefXbox mat2;
    };
    struct {
      struct Mat3RefXbox mat3;
    };
    struct {
      struct Mat4RefXbox mat4;
    };
  };
} MatRefXbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct IndexMap_u32__MatRefXbox {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__MatRefXbox;
typedef int32_t i32_be;
typedef i32_be i32Xbox;
/**
 *gen_ffi:export
 */
typedef struct Vector3Xbox {
  f32Xbox x;
  f32Xbox y;
  f32Xbox z;
} Vector3Xbox;
/**
 *gen_ffi:export
 */
typedef struct BoundingBoxXbox {
  struct Vector3Xbox center;
  f32Xbox unk_3;
  struct Vector3Xbox half_width;
  f32Xbox unk_7;
} BoundingBoxXbox;
/**
 *gen_ffi:export
 */
typedef struct LodInfoXbox {
  u32Xbox start;
  u32Xbox static_end;
  u32Xbox skinned_end;
  u32Xbox physics_end;
  u32Xbox breakable_end;
} LodInfoXbox;
/**
 *gen_ffi:export
 */
typedef struct ModelInfoXbox {
  CrcXbox key;
  i32Xbox gamemodemask;
  u32Xbox mat_offset;
  u32Xbox buffer_info_offset;
  struct BoundingBoxXbox bounding_box;
  u32Xbox mesh_order_offset;
  struct LodInfoXbox lod0;
  struct LodInfoXbox lod1;
  struct LodInfoXbox lod2;
  struct LodInfoXbox lod3;
  u32Xbox mat_num;
  u32Xbox bones_offset;
  u32Xbox bone_parents_offset;
  u32Xbox bone_transforms_offset;
  u32Xbox bones_num;
  u32Xbox skin_binds_offset;
  u32Xbox skin_binds_num;
  u32Xbox skin_order_offset;
  u32Xbox vbuff_offset;
  u32Xbox vbuff_num;
  u32Xbox ibuff_offset;
  u32Xbox ibuff_num;
  u32Xbox mesh_bounding_boxes_offset;
  f32Xbox unk_46;
  u32Xbox variation_counts;
  u32Xbox vals_j_num;
  u32Xbox vals_j_offset;
  u32Xbox block_offset;
  u32Xbox vals_k_offset;
  CrcXbox asset_key;
  u32Xbox asset_type;
  u32Xbox unk_54;
  u32Xbox unk_55;
  u32Xbox shape_offset;
  u32Xbox shape_num;
  u32Xbox hk_constraint_data_offset;
  u32Xbox hk_constraint_data_num;
  u32Xbox hk_constraint_offset;
  u32Xbox slots_offset;
  u32Xbox slot_map_offset;
  u32Xbox bone_bounding_boxes_offset;
} ModelInfoXbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct ref_slice_CrcXbox {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_CrcXbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct ref_slice_i32Xbox {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_i32Xbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct ref_slice_Matrix4x4Xbox {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Matrix4x4Xbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct ref_slice_BoundingBoxXbox {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_BoundingBoxXbox;
typedef struct BonesRefXbox {
  struct ref_slice_CrcXbox names;
  struct ref_slice_i32Xbox parents;
  struct ref_slice_Matrix4x4Xbox transforms;
  struct ref_slice_BoundingBoxXbox bounding_boxes;
} BonesRefXbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct ref_slice_Key2Xbox {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Key2Xbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct slice_BlockRefXbox {
  uint64_t align;
  uint8_t pad[8];
} slice_BlockRefXbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct IndexMap_u32_______VBuffInfoXbox {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32_______VBuffInfoXbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct IndexMap_u32_______IBuffInfoXbox {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32_______IBuffInfoXbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct Option_HkConstraintRefXbox {
  uint64_t align;
  uint8_t pad[112];
} Option_HkConstraintRefXbox;
/**
 * This is a proxy struct for correct size and alignment only
 * don't construct this directly and use the provided methods to access
 */
typedef struct slice_ShapeRefXbox {
  uint64_t align;
  uint8_t pad[8];
} slice_ShapeRefXbox;
typedef struct ModelDataRefXbox {
  struct ref_slice_BufferInfoXbox infos;
  struct ref_slice_u32Xbox vbuff_order;
  struct ref_slice_u32Xbox ibuff_order;
  struct IndexMap_u32__VertexBufferRefXbox vertex;
  struct IndexMap_u32__IndexBufferRefXbox index;
  const struct CompressedDataRef *data;
} ModelDataRefXbox;
typedef struct ModelRefXbox {
  const struct ModelInfoXbox *info;
  struct BonesRefXbox bones;
  struct ref_slice_u32Xbox mat_order;
  struct ref_slice_u32Xbox mesh_order;
  struct ref_slice_BoundingBoxXbox mesh_bounding_boxes;
  struct ref_slice_Matrix4x4Xbox skin_binds;
  struct ref_slice_u32Xbox vals_j;
  struct ref_slice_u16Xbox val_k_header;
  struct ref_slice_u32Xbox vals_k;
  struct ref_slice_u32Xbox skin_order;
  struct ref_slice_Key2Xbox slots;
  struct ref_slice_u32Xbox slot_map;
  const u32Xbox *block_header;
  struct ref_slice_u32Xbox block_offsets;
  struct slice_BlockRefXbox blocks;
  struct ref_slice_BufferInfoXbox buffer_infos;
  struct ref_slice_u32Xbox vbuff_order;
  struct ref_slice_u32Xbox ibuff_order;
  struct IndexMap_u32_______VBuffInfoXbox vbuffs;
  struct IndexMap_u32_______IBuffInfoXbox ibuffs;
  struct IndexMap_u32__MatRefXbox mats;
  struct Option_HkConstraintRefXbox hk_constraint;
  struct ref_slice_HkConstraintDataXbox hk_constraint_datas;
  struct slice_ShapeRefXbox shapes;
  struct ModelDataRefXbox data;
} ModelRefXbox;