python_ffi/lotrc_rs.pxd


  #gen_ffi:export
  cdef struct MatBaseXbox:
    u32Xbox unk_0;
    u32Xbox unk_1;
    CrcXbox tex0;
    CrcXbox tex1;
    CrcXbox tex2;
    CrcXbox tex3;
    CrcXbox tex4;
    CrcXbox tex5;
    CrcXbox key_guid;
    CrcXbox mask0;
    CrcXbox mask1;
    CrcXbox mask2;
    u32Xbox unk_12;
    u32Xbox unk_13;
    u32Xbox unk_14;
    u32Xbox unk_15;
    u32Xbox unk_16;
    u32Xbox unk_17;
    u32Xbox unk_18;
    u32Xbox unk_19;
    u32Xbox unk_20;
    u32Xbox unk_21;
    u32Xbox unk_22;
    u32Xbox unk_23;
    u32Xbox unk_24;
    u32Xbox unk_25;
    u32Xbox unk_26;
    u32Xbox unk_27;
    u32Xbox unk_28;
    u32Xbox unk_29;
    u32Xbox unk_30;
    u32Xbox unk_31;
    u32Xbox unk_32;
    u32Xbox unk_33;
    u32Xbox z_34;
    u32Xbox z_35;
    u32Xbox z_36;
    u32Xbox z_37;
    u32Xbox z_38;
    u32Xbox z_39;
    u32Xbox unk_40;
    u32Xbox unk_41;
    u32Xbox unk_42;
    u32Xbox unk_43;
    u32Xbox unk_44;
    u32Xbox unk_45;
    u32Xbox unk_46;
    u32Xbox unk_47;
    u32Xbox unk_48;
    u32Xbox unk_49;
    u64Xbox flags;
    u32Xbox kind;
    u32Xbox unk_53;
    u8Xbox unk_54a;
    u8Xbox unk_54b;
    u16Xbox side_flags;
    u32Xbox unk_55;
    u32Xbox unk_56;
    u32Xbox unk_57;
    f32Xbox unk_58;
    f32Xbox unk_59;
    f32Xbox unk_60;
    f32Xbox unk_61;
    f32Xbox unk_62;
    f32Xbox unk_63;
    f32Xbox unk_64;
    f32Xbox unk_65;
    f32Xbox unk_66;
    f32Xbox unk_67;
    f32Xbox unk_68;
    f32Xbox unk_69;
    u32Xbox unk_70;
    u32Xbox unk_71;
    u32Xbox unk_72;
    f32Xbox unk_73;
    f32Xbox unk_74;
    f32Xbox unk_75;
    f32Xbox unk_76;
    u32Xbox unk_77;
    f32Xbox unk_78;
    f32Xbox unk_79;
    f32Xbox unk_80;
    f32Xbox unk_81;
    u32Xbox unk_82;
    u32Xbox unk_83;
    u32Xbox unk_84;
    f32Xbox unk_85;
    u32Xbox mat_extra_offset;
    CrcXbox key;
    u32Xbox unk_88;
    u32Xbox z_89;

  #gen_ffi:export
  cdef struct Mat1Xbox:
    MatBaseXbox base;

  #gen_ffi:export
  cdef struct MatExtraXbox:
    u32Xbox unk_0;
    u32Xbox unk_1;
    u32Xbox unk_2;
    u32Xbox unk_3;
    u32Xbox unk_4;
    u32Xbox unk_5;
    u32Xbox unk_6;
    u32Xbox unk_7;
    u32Xbox unk_8;
    u32Xbox unk_9;
    u32Xbox unk_10;
    f32Xbox unk_11;
    f32Xbox unk_12;
    f32Xbox unk_13;
    f32Xbox unk_14;
    f32Xbox unk_15;
    u32Xbox unk_16;
    f32Xbox unk_17;
    f32Xbox unk_18;
    f32Xbox unk_19;
    f32Xbox unk_20;
    f32Xbox unk_21;
    u32Xbox unk_22;
    u32Xbox unk_23;
    u32Xbox unk_24;
    u32Xbox unk_25;
    u32Xbox unk_26;
    u32Xbox unk_27;
    u32Xbox unk_28;
    u32Xbox unk_29;
    u32Xbox unk_30;
    u32Xbox unk_31;
    u32Xbox unk_32;
    u32Xbox unk_33;
    u32Xbox unk_34;
    u32Xbox unk_35;
    u32Xbox unk_36;
    u32Xbox unk_37;
    u32Xbox unk_38;
    u32Xbox unk_39;
    u32Xbox unk_40;
    u32Xbox unk_41;
    u32Xbox unk_42;
    u32Xbox unk_43;
    u32Xbox unk_44;
    u32Xbox unk_45;
    u32Xbox unk_46;
    u32Xbox unk_47;
    u32Xbox unk_48;
    u32Xbox unk_49;

  cdef struct Mat1RefXbox:
    const Mat1Xbox *info;
    const MatExtraXbox *extra;

  #gen_ffi:export
  cdef struct Mat2Xbox:
    MatBaseXbox base;
    u32Xbox unk_90;
    u32Xbox unk_91;
    u32Xbox unk_92;
    u32Xbox unk_93;
    u32Xbox unk_94;
    u32Xbox unk_95;
    u32Xbox unk_96;
    u32Xbox unk_97;
    u32Xbox unk_98;
    u32Xbox unk_99;
    u32Xbox unk_100;
    u32Xbox unk_101;
    f32Xbox unk_102;
    f32Xbox unk_103;
    f32Xbox unk_104;
    f32Xbox unk_105;
    f32Xbox unk_106;
    f32Xbox unk_107;
    f32Xbox unk_108;
    f32Xbox unk_109;
    f32Xbox unk_110;
    f32Xbox unk_111;
    f32Xbox unk_112;
    f32Xbox unk_113;
    u32Xbox unk_114;
    u32Xbox unk_115;
    u32Xbox unk_116;
    CrcXbox unk_117;
    CrcXbox unk_118;
    CrcXbox unk_119;
    u8Xbox unk_120a;
    u8Xbox unk_120b;
    u8Xbox unk_120c;
    u8Xbox unk_120d;
    u32Xbox unk_121;

  cdef struct Mat2RefXbox:
    const Mat2Xbox *info;
    const MatExtraXbox *extra;

  #gen_ffi:export
  cdef struct Mat3Xbox:
    MatBaseXbox base;
    f32Xbox unk_90;
    f32Xbox unk_91;
    f32Xbox unk_92;
    f32Xbox unk_93;
    f32Xbox unk_94;
    f32Xbox unk_95;
    f32Xbox unk_96;
    f32Xbox unk_97;
    f32Xbox unk_98;
    f32Xbox unk_99;
    f32Xbox unk_100;
    f32Xbox unk_101;
    f32Xbox unk_102;
    f32Xbox unk_103;
    f32Xbox unk_104;
    f32Xbox unk_105;
    f32Xbox unk_106;
    f32Xbox unk_107;
    f32Xbox unk_108;
    f32Xbox unk_109;
    f32Xbox unk_110;
    f32Xbox unk_111;
    f32Xbox unk_112;
    f32Xbox unk_113;
    u8Xbox variation_id_color;
    u8Xbox variation_id_texture;
    u8Xbox variation_id_specular;
    u8Xbox unk_114d;
    u32Xbox unk_115;

  cdef struct Mat3RefXbox:
    const Mat3Xbox *info;
    const MatExtraXbox *extra;

  #gen_ffi:export
  cdef struct Mat4Xbox:
    MatBaseXbox base;
    f32Xbox unk_90;
    u32Xbox unk_91;
    u32Xbox unk_92;
    u32Xbox unk_93;
    u32Xbox unk_94;
    u32Xbox unk_95;
    f32Xbox unk_96;
    u32Xbox unk_97;
    f32Xbox unk_98;
    u32Xbox unk_99;
    u32Xbox unk_100;
    u32Xbox unk_101;
    u32Xbox unk_102;
    u32Xbox unk_103;
    f32Xbox unk_104;
    u32Xbox unk_105;
    f32Xbox unk_106;
    u32Xbox unk_107;
    u32Xbox unk_108;
    f32Xbox unk_109;
    u32Xbox unk_110;
    u32Xbox unk_111;
    f32Xbox unk_112;
    f32Xbox unk_113;
    f32Xbox unk_114;
    u32Xbox unk_115;
    u32Xbox unk_116;
    f32Xbox unk_117;
    u32Xbox unk_118;
    u32Xbox unk_119;
    f32Xbox unk_120;
    f32Xbox unk_121;
    f32Xbox unk_122;
    u32Xbox unk_123;
    u32Xbox unk_124;
    f32Xbox unk_125;
    u32Xbox unk_126;
    u32Xbox unk_127;
    f32Xbox unk_128;
    f32Xbox unk_129;
    f32Xbox unk_130;
    u32Xbox unk_131;
    u32Xbox unk_132;
    f32Xbox unk_133;
    u32Xbox unk_134;
    u32Xbox unk_135;
    f32Xbox unk_136;
    f32Xbox unk_137;
    f32Xbox unk_138;
    u32Xbox unk_139;
    u32Xbox unk_140;
    f32Xbox unk_141;
    u32Xbox unk_142;
    u32Xbox unk_143;
    f32Xbox unk_144;
    f32Xbox unk_145;

  cdef struct Mat4RefXbox:
    const Mat4Xbox *info;
    const MatExtraXbox *extra;

  cdef enum:
    MatRefXbox_Mat1,
    MatRefXbox_Mat2,
    MatRefXbox_Mat3,
    MatRefXbox_Mat4,
  ctypedef uint8_t MatRefXbox_Tag;

  cdef struct MatRefXbox:
    MatRefXbox_Tag tag;
    Mat1RefXbox mat1;
    Mat2RefXbox mat2;
    Mat3RefXbox mat3;
    Mat4RefXbox mat4;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__MatRefXbox:
    uint64_t align;
    uint8_t pad[64];

  ctypedef int32_t i32_be;

  ctypedef i32_be i32Xbox;

  #gen_ffi:export
  cdef struct Vector3Xbox:
    f32Xbox x;
    f32Xbox y;
    f32Xbox z;

  #gen_ffi:export
  cdef struct BoundingBoxXbox:
    Vector3Xbox center;
    f32Xbox unk_3;
    Vector3Xbox half_width;
    f32Xbox unk_7;

  #gen_ffi:export
  cdef struct LodInfoXbox:
    u32Xbox start;
    u32Xbox static_end;
    u32Xbox skinned_end;
    u32Xbox physics_end;
    u32Xbox breakable_end;

  #gen_ffi:export
  cdef struct ModelInfoXbox:
    CrcXbox key;
    i32Xbox gamemodemask;
    u32Xbox mat_offset;
    u32Xbox buffer_info_offset;
    BoundingBoxXbox bounding_box;
    u32Xbox mesh_order_offset;
    LodInfoXbox lod0;
    LodInfoXbox lod1;
    LodInfoXbox lod2;
    LodInfoXbox lod3;
    u32Xbox mat_num;
    u32Xbox bones_offset;
    u32Xbox bone_parents_offset;
    u32Xbox bone_transforms_offset;
    u32Xbox bones_num;
    u32Xbox skin_binds_offset;
    u32Xbox skin_binds_num;
    u32Xbox skin_order_offset;
    u32Xbox vbuff_offset;
    u32Xbox vbuff_num;
    u32Xbox ibuff_offset;
    u32Xbox ibuff_num;
    u32Xbox mesh_bounding_boxes_offset;
    f32Xbox unk_46;
    u32Xbox variation_counts;
    u32Xbox vals_j_num;
    u32Xbox vals_j_offset;
    u32Xbox block_offset;
    u32Xbox vals_k_offset;
    CrcXbox asset_key;
    u32Xbox asset_type;
    u32Xbox unk_54;
    u32Xbox unk_55;
    u32Xbox shape_offset;
    u32Xbox shape_num;
    u32Xbox hk_constraint_data_offset;
    u32Xbox hk_constraint_data_num;
    u32Xbox hk_constraint_offset;
    u32Xbox slots_offset;
    u32Xbox slot_map_offset;
    u32Xbox bone_bounding_boxes_offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_CrcXbox:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_i32Xbox:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_Matrix4x4Xbox:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_BoundingBoxXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct BonesRefXbox:
    ref_slice_CrcXbox names;
    ref_slice_i32Xbox parents;
    ref_slice_Matrix4x4Xbox transforms;
    ref_slice_BoundingBoxXbox bounding_boxes;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_Key2Xbox:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct slice_BlockRefXbox:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32_______VBuffInfoXbox:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32_______IBuffInfoXbox:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct Option_HkConstraintRefXbox:
    uint64_t align;
    uint8_t pad[112];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct slice_ShapeRefXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct ModelDataRefXbox:
    ref_slice_BufferInfoXbox infos;
    ref_slice_u32Xbox vbuff_order;
    ref_slice_u32Xbox ibuff_order;
    IndexMap_u32__VertexBufferRefXbox vertex;
    IndexMap_u32__IndexBufferRefXbox index;
    const CompressedDataRef *data;

  cdef struct ModelRefXbox:
    const ModelInfoXbox *info;
    BonesRefXbox bones;
    ref_slice_u32Xbox mat_order;
    ref_slice_u32Xbox mesh_order;
    ref_slice_BoundingBoxXbox mesh_bounding_boxes;
    ref_slice_Matrix4x4Xbox skin_binds;
    ref_slice_u32Xbox vals_j;
    ref_slice_u16Xbox val_k_header;
    ref_slice_u32Xbox vals_k;
    ref_slice_u32Xbox skin_order;
    ref_slice_Key2Xbox slots;
    ref_slice_u32Xbox slot_map;
    const u32Xbox *block_header;
    ref_slice_u32Xbox block_offsets;
    slice_BlockRefXbox blocks;
    ref_slice_BufferInfoXbox buffer_infos;
    ref_slice_u32Xbox vbuff_order;
    ref_slice_u32Xbox ibuff_order;
    IndexMap_u32_______VBuffInfoXbox vbuffs;
    IndexMap_u32_______IBuffInfoXbox ibuffs;
    IndexMap_u32__MatRefXbox mats;
    Option_HkConstraintRefXbox hk_constraint;
    ref_slice_HkConstraintDataXbox hk_constraint_datas;
    slice_ShapeRefXbox shapes;
    ModelDataRefXbox data;
